# cm0304-coursework

./: .gitignore  AUTHORS  INSTALL  README  configure.ac
src/: .gitignore  Makefile.am  base.hpp  coursework.cpp  coursework.hpp  main.cpp  models.cpp  models.hpp  util.cpp  util.hpp
